--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          path: "./build"
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: "2024"
+          path: "./ci-2024"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -23,12 +31,13 @@ jobs:
       - name: Build
         uses: actions/jekyll-build-pages@v1
         with:
-          destination: "./2024"
+          source: "./ci-2024"
+          destination: "./build/2024"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./2024"
+          path: "./build"
 
   deploy:
     runs-on: ubuntu-latest
