--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Bonsai Developer Conference 2024
 email: conference@bonsai-rx.org
 description: 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/2024" # the subpath of your site, e.g. /blog
 url: https://conference.bonsai.dev # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bonsai_rx
 github_username:  bonsai-rx
