Update seo metadata and url

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: |
   Sainsbury Wellcome Centre
   London, UK
 baseurl: "/2024"
-url: https://conference.bonsai.dev
+url: https://conference.bonsai-rx.org
 github_username:  bonsai-rx
 mastodon:
   - username: bonsai
